--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
 name: forcemvc2
+version: 1.0.0
 author: Joris Hermans <hermansj@gmail.com>
 description: A serverside web mvc framework with templates (ported to Dart 2 by Ross Albertson)
 homepage: https://github.com/rossalbertson/dart-forcemvc2
