--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   locales: ^0.1.0
 #  jsonify: '>=0.0.1 <0.0.2'
   mockito: ^4.0.0
+  mirrorme2: ^0.1.0
 dev_dependencies:
   test: ^1.0.0
 #  mock: '>=0.11.0 <0.11.1'
